unpackaged/main/default/objects/ETT_Tools_Master__c/ETT_Tools_Master__c.object-meta.xml
<CustomObject>
    <label>Tools &amp; Materials Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tools &amp; Materials Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>