unpackaged/main/default/objects/ETT_Tools_Master__c/fields/Depreciable_item_selection_behaviour__c.field-meta.xml
<CustomField>
    <fullName>Depreciable_item_selection_behaviour__c</fullName>
    <label>Depreciable item selection behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ETT_Track_Depreciable_Item_Usage_at_JC__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto-create for all JC</fullName>
            </value>
            <value>
                <fullName>Display selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>