unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Allocated_Units__c.field-meta.xml
<CustomField>
    <fullName>ETT_Allocated_Units__c</fullName>
    <label>Factory Stock Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>