unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Depth__c.field-meta.xml
<CustomField>
    <fullName>ETT_Depth__c</fullName>
    <label>Depth</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>