unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Individual_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>ETT_Individual_Unit_Value__c</fullName>
    <label>Individual Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>