unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_KG_Per_Mtr__c.field-meta.xml
<CustomField>
    <fullName>ETT_KG_Per_Mtr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KG Per Mtr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>