unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Maintenance_Frquency__c.field-meta.xml
<CustomField>
    <fullName>ETT_Maintenance_Frquency__c</fullName>
    <label>Maintenance Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>