unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Pattern_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern Master</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Tools &amp; Materials Master</relationshipLabel>
    <relationshipName>Tools_Materials_Master</relationshipName>
    <type>Lookup</type>
</CustomField>