unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Production_Areas__c.field-meta.xml
<CustomField>
    <fullName>ETT_Production_Areas__c</fullName>
    <label>Production Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Production_Areas</valueSetName>
    </valueSet>
</CustomField>