unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_Serial_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique serial number code for individual tool/material if applicable</inlineHelpText>
    <label>Serial No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>