unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Tool_type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tool_type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blade</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Side Buffer</fullName>
            </value>
            <value>
                <fullName>Suction Pipeline</fullName>
            </value>
            <value>
                <fullName>Suction Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>