unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Total_Allocated_Stock_Value__c.field-meta.xml
<CustomField>
    <fullName>ETT_Total_Allocated_Stock_Value__c</fullName>
    <label>Total Allocated Stock Value</label>
    <summarizedField>ETT_Tools_Allocation__c.ETT_Allocated_Stocks__c</summarizedField>
    <summaryFilterItems>
        <field>ETT_Tools_Allocation__c.Allocation_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Obsolete</value>
    </summaryFilterItems>
    <summaryForeignKey>ETT_Tools_Allocation__c.ETT_Tools_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>