unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Total_Unallocated_Stock_Value__c.field-meta.xml
<CustomField>
    <fullName>ETT_Total_Unallocated_Stock_Value__c</fullName>
    <formula>ETT_Stock_Value__c-ETT_Total_Allocated_Stock_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unallocated Stock Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>