unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Track_Depreciable_Item_Usage_at_JC__c.field-meta.xml
<CustomField>
    <fullName>ETT_Track_Depreciable_Item_Usage_at_JC__c</fullName>
    <label>Track Depreciable Item Usage at JC?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ETT_Usage_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Track</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>