unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Tread_Width__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tread_Width__c</fullName>
    <label>Tread Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>