unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Unique_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>