unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Unit_type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Unit_type__c</fullName>
    <label>Unit type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity based</fullName>
            </value>
            <value>
                <fullName>Length (meters based)</fullName>
            </value>
            <value>
                <fullName>Weight(Kgm based)</fullName>
            </value>
            <value>
                <fullName>Litre based</fullName>
            </value>
            <value>
                <fullName>Individual product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>