unpackaged/main/default/objects/ETT_Tools_Master__c/fields/ETT_Usage_type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Usage_type__c</fullName>
    <label>Usage type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Depreciable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>