unpackaged/main/default/objects/ETT_Tools_Master__c/fields/Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Unit_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>