unpackaged/main/default/objects/ETT_Tools_Master__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAY</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>Mtr</fullName>
            </value>
            <value>
                <fullName>Hrs</fullName>
            </value>
            <value>
                <fullName>Ltr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>