unpackaged/main/default/objects/ETT_Tools_Master__c/recordTypes/Material_Cushion_Gum.recordType-meta.xml
<RecordType>
    <fullName>Material_Cushion_Gum</fullName>
    <active>true</active>
    <label>Material - Cushion Gum</label>
</RecordType>