unpackaged/main/default/objects/ETT_Tools_Master__c/recordTypes/Material_Others.recordType-meta.xml
<RecordType>
    <fullName>Material_Others</fullName>
    <active>true</active>
    <label>Material - Others</label>
</RecordType>