unpackaged/main/default/objects/ETT_Tools_Master__c/recordTypes/Material_Treads.recordType-meta.xml
<RecordType>
    <fullName>Material_Treads</fullName>
    <active>true</active>
    <label>Material - Treads</label>
</RecordType>