unpackaged/main/default/objects/ETT_Tools_Master__c/recordTypes/Tools.recordType-meta.xml
<RecordType>
    <fullName>Tools</fullName>
    <active>true</active>
    <description>This record type tracks tools</description>
    <label>Tools</label>
</RecordType>