unpackaged/main/default/objects/ETT_Tools_Master__c/validationRules/Validate_consumables_unallocated.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_consumables_unallocated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(ETT_Usage_type__c)=&#39;Consumable&#39;, ETT_Total_Unallocated_Stock_Value__c&lt;0)</errorConditionFormula>
    <errorMessage>System doesn&#39;t allow Master stock to go negative for usage type of Consumable</errorMessage>
</ValidationRule>