unpackaged/main/default/objects/ETT_Tools_Master__c/validationRules/Validate_Factory_Main_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Factory_Main_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>ETT_Allocated_Units__c&gt;ETT_Main_Stock_Units__c</errorConditionFormula>
    <errorDisplayField>ETT_Allocated_Units__c</errorDisplayField>
    <errorMessage>Factory stock cannot exceed the main stock value</errorMessage>
</ValidationRule>