unpackaged/main/default/objects/ETT_Tools_Master__c/validationRules/Validate_Factory_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Factory_Stock</fullName>
    <active>false</active>
    <errorConditionFormula>AND(PRIORVALUE(ETT_Allocated_Units__c)!=ETT_Allocated_Units__c,ETT_Allocated_Units__c&lt;PRIORVALUE(ETT_Allocated_Units__c))</errorConditionFormula>
    <errorDisplayField>ETT_Allocated_Units__c</errorDisplayField>
    <errorMessage>Factory Stock cannot be reduced once added.</errorMessage>
</ValidationRule>