unpackaged/main/default/objects/ETT_Tools_Master__c/validationRules/Validate_Individual_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Individual_Unit</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(ETT_Individual_Unit_Value__c)!=ETT_Individual_Unit_Value__c</errorConditionFormula>
    <errorDisplayField>ETT_Individual_Unit_Value__c</errorDisplayField>
    <errorMessage>Individual unit value cannot be changed once added</errorMessage>
</ValidationRule>