unpackaged/main/default/objects/ETT_Tools_Master__c/listViews/ETT_All_Material_Cushion_Gum_Master.listView-meta.xml
<ListView>
    <fullName>ETT_All_Material_Cushion_Gum_Master</fullName>
    <columns>NAME</columns>
    <columns>ETT_Status__c</columns>
    <columns>ETT_Production_Areas__c</columns>
    <columns>ETT_Main_Stock_Units__c</columns>
    <columns>ETT_Allocated_Units__c</columns>
    <columns>Unit_Text__c</columns>
    <columns>ETT_Unit_type__c</columns>
    <columns>ETT_Individual_Unit_Value__c</columns>
    <columns>ETT_Total_Unallocated_Stock_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETT_Tools_Master__c.Material_Cushion_Gum</value>
    </filters>
    <label>All Material Cushion Gum Master</label>
    <language>en_US</language>
</ListView>