unpackaged/main/default/objects/ETT_Tools_Master__c/listViews/ETT_All_Material_Others.listView-meta.xml
<ListView>
    <fullName>ETT_All_Material_Others</fullName>
    <columns>NAME</columns>
    <columns>ETT_Status__c</columns>
    <columns>ETT_Production_Areas__c</columns>
    <columns>ETT_Unique_Code__c</columns>
    <columns>ETT_Main_Stock_Units__c</columns>
    <columns>ETT_Allocated_Units__c</columns>
    <columns>Unit_Text__c</columns>
    <columns>ETT_Unit_type__c</columns>
    <columns>ETT_Individual_Unit_Value__c</columns>
    <columns>ETT_Total_Unallocated_Stock_Value__c</columns>
    <columns>ETT_Usage_type__c</columns>
    <columns>ETT_Maintenance_Frquency__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETT_Tools_Master__c.Material_Others</value>
    </filters>
    <label>All Material Others</label>
    <language>en_US</language>
</ListView>